add login and registration
